--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Allerta+Stencil|Schoolbell|Rock+Salt" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
+  integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
+  crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -18,11 +22,12 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" id="logo" href="#">{{ Raphael Tapioca }}</a>
+                <a class="navbar-brand animated headShake" id="logo" href="#">{{ Raphael Tapioca }}</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-                <li class="social"><a href="https://github.com/raphatapi" target="_blank"><img src="./assets/pics/icons/github.png"></a></li>
-                <li class="social"><a href="https://www.linkedin.com/in/raphael-tapioca" target="_blank"><img src="./assets/pics/icons/linkedin.png"></a></li>
+                <li class="social"><a href="https://github.com/raphatapi" target="_blank"><img id="github" class="animated rubberBand" src="./assets/pics/icons/github.png"></a></li>
+                <li class="social"><a href="https://www.linkedin.com/in/raphael-tapioca" target="_blank"><img id="linkedin" class="animated rubberBand" src="./assets/pics/icons/linkedin.png"></a></li>
+                <li class="social"><a href="./assets/Raphael Tapioca.pdf" target="_blank"><img id="pdf" class="animated rubberBand" src="./assets/pics/icons/doc.png"></a></li>
             </ul>
         </div>
     </nav>
@@ -44,7 +49,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <span id="picWrap">
-                            <a href="#"><img id="photo" src="rt.jpg"></a>
+                            <a href="#"><img id="photo" class="animated tada" src="rt.jpg"></a>
                         </span>
                         <span id="header">
                             <h1>hi! Let me help you build great web applications</h1>
@@ -97,7 +102,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5"></div>
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
                         <span id="upkeep">
-                            <a href="http://up-keeps.herokuapp.com" target="_blank" data-toggle="popover" data-trigger="hover" data-img="./assets/preventative.gif"><h1>up-keep</h1></a>
+                            <a href="http://up-keeps.herokuapp.com" target="_blank" data-toggle="popover" data-trigger="hover" data-img="./assets/preventative.gif"><h1 class="animated pulse">up-keep</h1></a>
                             <h3>Find preventative maintenance for you home</h3>
                             <span id="award-useful">
                                 <img src="./assets/pics/icons/award.png" alt="Award">
@@ -128,7 +133,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
                         <span id="purple">
                             <a id="tree" href="https://raphatapi.github.io/purple-tree/index.html" target="_blank" data-toggle="popover" data-trigger="hover" data-img="./assets/purple.gif">
-                            <h1><img src="./assets/pics/icons/purpletree.png">Purple Tree</h1></a>
+                            <h1 class="animated pulse"><img src="./assets/pics/icons/purpletree.png">Purple Tree</h1></a>
                             <h3>Choose your adventure story book</h3>
                             <span id="award">
                                 <img src="./assets/pics/icons/award.png" alt="Award">
@@ -266,5 +271,6 @@
             </div>
         </section>
     </div>
+    <footer class="footer"><h1>&copy Tapioca Design 2018</h1></footer>
 </body>
 </html>
