--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
     <div class="container-full">
         <section id="section1">
-                <!-- <div class="menu-icon" onclick="this.classList.toggle('hover');Drop(0)">
+                <div class="menu-icon" onclick="this.classList.toggle('hover');Drop(0)">
                         <div class="menu-bar menu-bar1"></div>
                         <div class="menu-bar menu-bar2"></div>
                         <div class="menu-bar menu-bar3"></div>
@@ -44,7 +44,7 @@
                         <div class="menu-con" style="background:mediumseagreen;"><p>PRODUCTS</p></div> 
                         <div class="menu-con" style="background:teal;"><p>ABOUT</p></div> 
                         <div class="menu-con" style="background:rgb(70,70,70);"><p>CONTACT</p></div>
-                    </div> -->
+                    </div>
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
