--- a/index.html
+++ b/index.html
@@ -19,19 +19,7 @@
     <script type="text/javascript" src="./assets/js/script.js"></script>
 </head>
 <body>
-        <div class="menu-icon" onclick="this.classList.toggle('hover');Drop(0)">
-                <div class="menu-bar menu-bar1"></div>
-                <div class="menu-bar menu-bar2"></div>
-                <div class="menu-bar menu-bar3"></div>
-            </div>
-            <div class="menu">
-                <div class="menu-con" style="background:IndianRed;"><p>HOME</p></div>
-                <div class="menu-con" style="background:rgb(160,160,170);"><p>GALLERY</p></div>  
-                <div class="menu-con" style="background:mediumseagreen;"><p>PRODUCTS</p></div> 
-                <div class="menu-con" style="background:teal;"><p>ABOUT</p></div> 
-                <div class="menu-con" style="background:rgb(70,70,70);"><p>CONTACT</p></div>
-            </div>
-    <!-- <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand animated headShake" id="logo" href="#">{{ Raphael Tapioca }}</a>
@@ -42,7 +30,19 @@
                 <li class="social"><a href="./assets/Raphael Tapioca.pdf" target="_blank"><img id="pdf" class="animated rubberBand" src="./assets/pics/icons/doc.png"></a></li>
             </ul>
         </div>
-    </nav> -->
+    </nav>
+    <div class="menu-icon" onclick="this.classList.toggle('hover');Drop(0)">
+            <div class="menu-bar menu-bar1"></div>
+            <div class="menu-bar menu-bar2"></div>
+            <div class="menu-bar menu-bar3"></div>
+        </div>
+        <div class="menu">
+            <div class="menu-con" style="background:IndianRed;"><p>HOME</p></div>
+            <div class="menu-con" style="background:rgb(160,160,170);"><p>GALLERY</p></div>  
+            <div class="menu-con" style="background:mediumseagreen;"><p>PRODUCTS</p></div> 
+            <div class="menu-con" style="background:teal;"><p>ABOUT</p></div> 
+            <div class="menu-con" style="background:rgb(70,70,70);"><p>CONTACT</p></div>
+        </div>
     <div class="container-full">
         <section id="section1">
             <div class="container">
