--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </ul>
         </div>
     </nav>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <button onclick="topFunction()" id="myBtn" class="animated pulse" title="Go to top"><i class="fa fa-chevron-up"></i></button>
     <div class="container-full">
         <section id="section1">
             <div class="container">
@@ -90,7 +90,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5"></div>
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
                         <span id="upkeep">
-                            <a href="http://up-keeps.herokuapp.com" target="_blank" data-toggle="popover" data-trigger="hover" data-img="./assets/preventative.gif"><h1 class="animated pulse">up-keep</h1></a>
+                            <a href="http://up-keeps.herokuapp.com" target="_blank" data-toggle="popover" data-trigger="hover" data-img="./assets/preventative.gif"><h1 class="animated rubberBand">up-keep</h1></a>
                             <h3>Find preventative maintenance for you home</h3>
                             <span id="award-useful">
                                 <img src="./assets/pics/icons/award.png" alt="Award">
@@ -121,7 +121,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
                         <span id="purple">
                             <a id="tree" href="https://raphatapi.github.io/purple-tree/index.html" target="_blank" data-toggle="popover" data-trigger="hover" data-img="./assets/purple.gif">
-                            <h1 class="animated pulse"><img src="./assets/pics/icons/purpletree.png">Purple Tree</h1></a>
+                            <h1 class="animated bounce"><img src="./assets/pics/icons/purpletree.png">Purple Tree</h1></a>
                             <h3>Choose your adventure story book</h3>
                             <span id="award">
                                 <img src="./assets/pics/icons/award.png" alt="Award">
