--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Allerta+Stencil|Schoolbell|Rock+Salt" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Allerta+Stencil|Schoolbell|Rock+Salt|Fredericka+the+Great" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!-- AnimateJS -->
@@ -67,8 +67,8 @@
                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                         <div id="drawing">
                             <h1>Back to the drawing board...</h1>
-                        </br>
-                            <h2>Plan before developing</h2>
+                            </br>
+                            <p>Plan before developing</p>
                             <!-- <br> -->
                             <ol>
                                 <li>Wireframe before starting to code</li>
@@ -77,12 +77,12 @@
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
-                        <div id="sketch">
+                        <div class="sketch">
                             <img src="./assets/drawing.png" alt="Flow">
                         </div>
-                        <div id="sub-sketch">
-                            <img src="./assets/storyflow.png" alt="Story">
-                            <img src="./assets/Sketch.png" alt="Sketch">
+                        <div class="sub-sketch">
+                            <img class="story" src="./assets/storyflow.png" alt="Story">
+                            <img class="story" src="./assets/Sketch.png" alt="Sketch">
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
