--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <span id="picWrap">
                             <a href="#"><img id="photo" class="animated tada" src="rt.jpg"></a>
+                            <h1>Full-Stack Web Developer</h1>
                         </span>
                         <span id="header">
                             <h1>hi! Let's build great web applications</h1>
@@ -79,10 +80,10 @@
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
                         <div class="sketch">
                             <img src="./assets/drawing.png" alt="Flow">
-                        </div>
-                        <div class="sub-sketch">
-                            <img class="story" src="./assets/storyflow.png" alt="Story">
-                            <img class="story" src="./assets/Sketch.png" alt="Sketch">
+                            <div class="sub-sketch">
+                                <img id="story" src="./assets/storyflow.png" alt="Story">
+                                <img id="sketch" src="./assets/Sketch.png" alt="Sketch">
+                            </div>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
