--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <span id="picWrap">
                             <a href="#"><img id="photo" class="animated tada" src="rt.jpg"></a>
-                            <h1>Full-Stack Web Developer</h1>
+                            <!-- <h1>Full-Stack Web Developer</h1> -->
                         </span>
                         <span id="header">
-                            <h1>hi! Let's build great web applications</h1>
+                            <h1>Let's build great web applications!</h1>
                         </span>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
